# notebookwithconfigurableslides

./: .gitignore  CLAUDE.md  HOW-TO-RUN.md
backend/: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_project_source.py  0003_registry_generation.py  0004_outline_generation_usage.py  0005_guide_chat_freeform.py
backend/scripts/: mint_dev_token.py  seed_lite.py  seed_qa.py  seed_tenant.py
backend/src/: __init__.py  main.py
backend/src/api/: auth.py  chat.py  deps.py  generations.py  guide.py  health.py  jobs.py  languages.py  models.py  outlines.py  profiles.py  projects.py  router.py  sources.py  templates.py  tenant.py  usage.py
backend/src/auth/: dependencies.py  oidc.py  principal.py
backend/src/chat/: repository.py  service.py
backend/src/core/: config.py  correlation.py  crypto.py  db.py  errors.py  lite.py  logging.py  middleware.py
backend/src/engines/: __init__.py  base.py  circuit_breaker.py  llm.py  open_notebook.py  presenton.py
backend/src/generation/: artifact.py  consistency.py  freeform_mapper.py  freeform_service.py  mapper.py  repository.py  service.py  worker.py
backend/src/guide/: repository.py  service.py
backend/src/ingestion/: kinds.py  repository.py  service.py
backend/src/jobs/: repository.py  service.py
backend/src/metering/: aggregation.py  alerts.py  quota.py  service.py
backend/src/models/: __init__.py  base.py  chat.py  generation.py  guide.py  job.py  outline.py  (+6 more)
backend/tests/: conftest.py  fakes.py
(+125 files in other folders)
